Fix messages being too low.

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -62,7 +62,7 @@ blockquote
   > .msg
     position: relative
     left: -50%
-    top: -50%
+    margin-top: -25%
 
     background-color: #ddd
     padding: 20px
